# grimoirelab

default-grimoirelab-settings/: projects.json  setup.cfg
docker-compose/: docker-compose.yml  task_panels.py
