[general]
short_name = GrimoireLab
update = true
min_update_delay = 60
debug = false
logs_dir = /home/grimoire/logs
bulk_size = 100
scroll_size = 100
aliases_file = /home/grimoire/aliases.json

[projects]
projects_file = /home/grimoire/conf/projects.json

[es_collection]
url = http://elasticsearch:9200

[es_enrichment]
url = http://elasticsearch:9200
autorefresh = true

[sortinghat]
host = nginx
user = root
password = root
port = 8000
path = /identities/api/
ssl = false
database = sortinghat_db
autoprofile = [github, git]
matching = [email,name,username]
sleep_for = 100
unaffiliated_group = Unknown
affiliate = true

[panels]
kibiter_time_from = now-90d
kibiter_default_index = git
kibiter_url = http://kibiter:5601
kibiter_version = 6.8.6-3
github-comments = true

[phases]
collection = true
identities = true
enrichment = true
panels = true

#[bugzillarest]
#raw_index = bugzillarest_demo_raw
#enriched_index = bugzillarest_demo_enriched
#no-archive = true

#[confluence]
#no-archive = true
#raw_index = confluence_demo_raw
#enriched_index = confluence_demo_enriched

#[discourse]
#raw_index = discourse_demo_raw
#enriched_index = discourse_demo_enriched
#no-archive = true

[git]
raw_index = git_demo_raw
enriched_index = git_demo_enriched
latest-items = true
studies = [enrich_demography:git, enrich_areas_of_code:git, enrich_onion:git]

[github:issue]
raw_index = github_raw
enriched_index = github_enriched
api-token = <your-github-token>
category = issue
sleep-for-rate = true
no-archive = true
studies = [enrich_onion:github, enrich_backlog_analysis, enrich_demography:github]

[enrich_onion:github]
in_index_iss = github_issues_onion-src
in_index_prs = github_prs_onion-src
out_index_iss = github-issues-onion_enriched
out_index_prs = github-prs-onion_enriched

[enrich_backlog_analysis]
out_index = github_enrich_backlog
interval_days = 7
reduced_labels = [bug,enhancement]
map_label = [others, bugs, enhancements]

[enrich_demography:github]

[github:pull]
raw_index = github-pull_raw
enriched_index = github-pull_enriched
api-token = <your-github-token>
category = pull_request
sleep-for-rate = true
no-archive = true
studies = [enrich_onion:github, enrich_demography:github]

[github:repo]
raw_index = github-repo_raw
enriched_index = github-repo_enriched
api-token = <your-github-token>
category = repository
sleep-for-rate = true
no-archive = true
studies = [enrich_demography:github]

[github2:issue]
api-token = <your-github-token>
raw_index = github2-issues_raw
enriched_index = github2-issues_enriched
sleep-for-rate = true
category = issue
no-archive = true

[github2:pull]
api-token = <your-github-token>
raw_index = github2-pull_raw
enriched_index = github2-pull_enriched
sleep-for-rate = true
category = pull_request
no-archive = true

#[github]
#api-token = <YOUR_API_TOKEN_WHERE>
#enterprise-url = <YOUR_GITHUB_ENTERPRISE_URL>
#raw_index = github_demo_raw
#sleep-for-rate = true
#sleep-time = "300"
#enriched_index = github_demo_enriched

#[gitlab:issues]
#api-token = <YOUR_API_TOKEN_HERE>
#raw_index = gitlab_issues_demo_raw
#enriched_index = gitlab_issues_demo_enriched
#no-archive = true
#enterprise-url = <YOUR_GITLAB_INSTANCE_URL>
#sleep-for-rate = true

#[gitlab:merge]
#api-token = <YOUR_API_TOKEN_HERE>
#raw_index = gitlab_merges_demo_raw
#enriched_index = gitlab_merges_demo_enriched
#no-archive = true
#enterprise-url = <YOUR_GITLAB_INSTANCE_URL>
#category = merge_request
#sleep-for-rate = true

#[jira]
#raw_index = jira_demo_raw
#enriched_index = jira_demo_enriched
#no-archive = true

#[pipermail]
#raw_index = pipermail_demo_raw
#enriched_index = pipermail_demo_enriched
#no-verify = true

#[mediawiki]
#raw_index = mediawiki_demo_raw
#enriched_index = mediawiki_demo_enriched
#no-archive = true

#[meetup]
#raw_index = meetup_demo_raw
#enriched_index = meetup_demo_enriched
#api-token = <YOUR_API_TOKEN_WHERE>
#no-archive = true
#sleep-for-rate = true
#sleep-time = "300"

#[stackexchange]
#raw_index = stackexchange_demo_raw
#enriched_index = stackexchange_demo_enriched
#api-token = <YOUR_API_TOKEN_WHERE>
#no-archive = true

#[slack]
#raw_index = slack_demo_raw
#enriched_index = slack_demo_enriched
#api-token = <YOUR_API_TOKEN_WHERE>
#no-archive = true

#[supybot]
#raw_index = supybot_demo_raw
#enriched_index = supybot_demo_enriched

#[twitter]
#raw_index = twitter_demo_raw
#enriched_index = twitter_demo_enriched
#api-token = <YOUR_API_TOKEN_WHERE>
#no-archive = true
#sleep-for-rate = true
#sleep-time = 300

## studies based on enriched indexes

[enrich_demography:git]

[enrich_areas_of_code:git]
in_index = git_demo_raw
out_index = git-aoc_demo_enriched

[enrich_onion:git]
in_index = git
out_index = git-onion_demo_enriched
contribs_field = hash
